--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="col-lg-12">
               <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="index.html">
-                  <img src="assets/images/logo.png" alt="Logo" />
+                  <h2>Syaufy.</h2>
                 </a>
                 <!-- Logo -->
                 <button
@@ -321,7 +321,7 @@
             <div class="about-skills pt-25">
               <div class="skill-item mt-25">
                 <div class="skill-header">
-                  <h6 class="skill-title">HTML & CSS</h6>
+                  <h6 class="skill-title">HTML & CSS (Bootstrap, SASS)</h6>
                   <div class="skill-percentage">
                     <div class="count-box counted">
                       <span class="counter">80</span>
@@ -338,7 +338,7 @@
               <!-- skill item -->
               <div class="skill-item mt-25">
                 <div class="skill-header">
-                  <h6 class="skill-title">Adobe XD, Photoshop, Ilustrator</h6>
+                  <h6 class="skill-title">Adobe XD, Photoshop & Ilustrator</h6>
                   <div class="skill-percentage">
                     <div class="count-box counted">
                       <span class="counter">60</span>
@@ -355,7 +355,7 @@
               <!-- skill item -->
               <div class="skill-item mt-25">
                 <div class="skill-header">
-                  <h6 class="skill-title">Javascript</h6>
+                  <h6 class="skill-title">Javascript (React, Vue, Node)</h6>
                   <div class="skill-percentage">
                     <div class="count-box counted">
                       <span class="counter">50</span>
@@ -372,7 +372,7 @@
               <!-- skill item -->
               <div class="skill-item mt-25">
                 <div class="skill-header">
-                  <h6 class="skill-title">PHP</h6>
+                  <h6 class="skill-title">PHP (Codeigniter & Laravel)</h6>
                   <div class="skill-percentage">
                     <div class="count-box counted">
                       <span class="counter">65</span>
@@ -387,6 +387,22 @@
                 </div>
               </div>
               <!-- skill item -->
+              <div class="skill-item mt-25">
+                <div class="skill-header">
+                  <h6 class="skill-title">Python</h6>
+                  <div class="skill-percentage">
+                    <div class="count-box counted">
+                      <span class="counter">30</span>
+                    </div>
+                    %
+                  </div>
+                </div>
+                <div class="skill-bar">
+                  <div class="bar-inner">
+                    <div class="bar progress-line" data-width="30"></div>
+                  </div>
+                </div>
+              </div>
             </div>
             <!-- about skills -->
           </div>
@@ -426,8 +442,8 @@
               <div class="service-content">
                 <h4 class="service-title"><a href="#">Web Design</a></h4>
                 <p>
-                  Curabitur vitae magna felis. Nulla ac libero ornare,
-                  vestibulum lacus quis blandit enimdicta sunt.
+                  Contact me if u have idea of website you want to built. maybe
+                  i can help you with the designs i made.
                 </p>
               </div>
             </div>
@@ -443,8 +459,8 @@
                   <a href="#contact">Graphic Design</a>
                 </h4>
                 <p>
-                  Curabitur vitae magna felis. Nulla ac libero ornare,
-                  vestibulum lacus quis blandit enimdicta sunt.
+                  I can do photoshop or making a logo. feel free to contact me
+                  and asking me some tips.
                 </p>
               </div>
             </div>
@@ -458,8 +474,8 @@
               <div class="service-content">
                 <h4 class="service-title"><a href="#">App Design</a></h4>
                 <p>
-                  Curabitur vitae magna felis. Nulla ac libero ornare,
-                  vestibulum lacus quis blandit enimdicta sunt.
+                  Contact me if u have idea of apps you want to built. maybe i
+                  can help you with the designs i made.
                 </p>
               </div>
             </div>
@@ -475,8 +491,8 @@
                   <a href="#">Illustration Design</a>
                 </h4>
                 <p>
-                  Curabitur vitae magna felis. Nulla ac libero ornare,
-                  vestibulum lacus quis blandit enimdicta sunt.
+                  Contact me if u have idea of Illustration you want to built.
+                  maybe i can help you with the designs i made.
                 </p>
               </div>
             </div>
@@ -490,8 +506,9 @@
               <div class="service-content">
                 <h4 class="service-title"><a href="#">Web Development</a></h4>
                 <p>
-                  Curabitur vitae magna felis. Nulla ac libero ornare,
-                  vestibulum lacus quis blandit enimdicta sunt.
+                  Contact me if u have idea of website you want to built. maybe
+                  i can help you with the designs i made and make you a fully
+                  working website.
                 </p>
               </div>
             </div>
@@ -507,8 +524,8 @@
                   <a href="#">Consultancy and Support</a>
                 </h4>
                 <p>
-                  Curabitur vitae magna felis. Nulla ac libero ornare,
-                  vestibulum lacus quis blandit enimdicta sunt.
+                  Fell free to contact me if u have any problem . maybe i can
+                  help you. to make you happy , is my happiness too.
                 </p>
               </div>
             </div>
@@ -945,9 +962,10 @@
             <div class="section-title text-center pb-25">
               <h2 class="title">Get In Touch</h2>
               <p>
-                Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam
-                tempus, nunc id efficitur sagittis, urna est ultricies eros, ac
-                porta sem turpis quis leo.
+                I’m Syaauqi, a UI/UX Designer at Descienfy. I enjoy creating
+                user-centric, delightful, and human experiences. Design is how
+                its work, and i love animation tho! Currently learning react.js,
+                vue.js, and node.js.
               </p>
             </div>
             <!-- section title -->
@@ -1027,7 +1045,7 @@
               <div class="gmap_canvas">
                 <iframe
                   id="gmap_canvas"
-                  src="https://maps.google.com/maps?q=Mission%20District%2C%20San%20Francisco%2C%20CA%2C%20USA&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                  src="https://maps.google.com/maps?hl=en&amp;q=Green Garden Estate+(Syauqi)&amp;ie=UTF8&amp;t=&amp;z=17&amp;iwloc=B&amp;output=embed"
                   frameborder="0"
                   scrolling="no"
                   marginheight="0"
@@ -1046,63 +1064,6 @@
     <!--====== CONTACT PART ENDS ======-->
 
     <!--====== FOOTER PART START ======-->
-
-    <footer id="footer" class="footer-area">
-      <div class="footer-widget pt-130 pb-130">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8">
-              <div class="footer-content text-center">
-                <a href="index.html">
-                  <img src="assets/images/logo-2.png" alt="Logo" />
-                </a>
-                <p class="mt-">
-                  Please, purchase full version of Unfold to get all pages and
-                  features. Including credits removal, permission to use in
-                  commercial projects, working contact from, docs and support
-                </p>
-                <ul>
-                  <li>
-                    <a href="#"><i class="lni-facebook-filled"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="lni-twitter-original"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="lni-pinterest"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="lni-linkedin-original"></i></a>
-                  </li>
-                </ul>
-              </div>
-              <!-- footer content -->
-            </div>
-          </div>
-          <!-- row -->
-        </div>
-        <!-- container -->
-      </div>
-      <!-- footer widget -->
-      <div class="footer-copyright pb-20">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="copyright-text text-center pt-20">
-                <p>
-                  <!-- Template by
-                  <a href="https://uideck.com" rel="nofollow">UIdeck</a> -->
-                </p>
-              </div>
-              <!-- copyright text -->
-            </div>
-          </div>
-          <!-- row -->
-        </div>
-        <!-- container -->
-      </div>
-      <!-- footer widget -->
-    </footer>
 
     <!--====== FOOTER PART ENDS ======-->
 
