--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="row align-items-center">
             <div class="col-xl-5 col-lg-6">
               <div class="header-content-right">
-                <h4 class="sub-title">Hello, I’m</h4>
+                <h4 class="sub-title">Hello, My Name is</h4>
                 <h1 class="title">Syaauqi Zaaidan</h1>
                 <p>
                   A Freelance UI/UX Designer, Student & Web Developer. <br />
@@ -603,14 +603,14 @@
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="single-work text-center mt-30">
               <div class="work-image">
-                <img src="assets/images/work/w-1.jpg" alt="work" />
+                <img src="assets/images/work/w-1.png" alt="work" />
               </div>
               <div class="work-overlay">
                 <div class="work-content">
-                  <h3 class="work-title">Product Design</h3>
+                  <h3 class="work-title">iPhone Mockup Design.</h3>
                   <ul>
                     <li>
-                      <a class="image-popup" href="assets/images/work/w-1.jpg"
+                      <a class="image-popup" href="assets/images/work/w-1.png"
                         ><i class="lni-plus"></i
                       ></a>
                     </li>
@@ -626,14 +626,16 @@
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="single-work text-center mt-30">
               <div class="work-image">
-                <img src="assets/images/work/w-2.jpg" alt="work" />
+                <img src="assets/images/work/Overwatch.png" alt="work" />
               </div>
               <div class="work-overlay">
                 <div class="work-content">
-                  <h3 class="work-title">Product Design</h3>
+                  <h3 class="work-title">Overwatch Web Design</h3>
                   <ul>
                     <li>
-                      <a class="image-popup" href="assets/images/work/w-2.jpg"
+                      <a
+                        class="image-popup"
+                        href="assets/images/work/Overwatch.png"
                         ><i class="lni-plus"></i
                       ></a>
                     </li>
@@ -649,14 +651,16 @@
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="single-work text-center mt-30">
               <div class="work-image">
-                <img src="assets/images/work/w-3.jpg" alt="work" />
+                <img src="assets/images/work/Japanese.png" alt="work" />
               </div>
               <div class="work-overlay">
                 <div class="work-content">
-                  <h3 class="work-title">Product Design</h3>
+                  <h3 class="work-title">Japanese Web Design</h3>
                   <ul>
                     <li>
-                      <a class="image-popup" href="assets/images/work/w-3.jpg"
+                      <a
+                        class="image-popup"
+                        href="assets/images/work/Japanese.png"
                         ><i class="lni-plus"></i
                       ></a>
                     </li>
@@ -672,14 +676,16 @@
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="single-work text-center mt-30">
               <div class="work-image">
-                <img src="assets/images/work/w-4.jpg" alt="work" />
+                <img src="assets/images/work/Dashboard.png" alt="work" />
               </div>
               <div class="work-overlay">
                 <div class="work-content">
-                  <h3 class="work-title">Product Design</h3>
+                  <h3 class="work-title">Dashboard Design</h3>
                   <ul>
                     <li>
-                      <a class="image-popup" href="assets/images/work/w-4.jpg"
+                      <a
+                        class="image-popup"
+                        href="assets/images/work/Dashboard.png"
                         ><i class="lni-plus"></i
                       ></a>
                     </li>
@@ -695,14 +701,16 @@
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="single-work text-center mt-30">
               <div class="work-image">
-                <img src="assets/images/work/w-5.jpg" alt="work" />
+                <img src="assets/images/work/Coding.png" alt="work" />
               </div>
               <div class="work-overlay">
                 <div class="work-content">
-                  <h3 class="work-title">Product Design</h3>
+                  <h3 class="work-title">Code website Design</h3>
                   <ul>
                     <li>
-                      <a class="image-popup" href="assets/images/work/w-5.jpg"
+                      <a
+                        class="image-popup"
+                        href="assets/images/work/Coding.png"
                         ><i class="lni-plus"></i
                       ></a>
                     </li>
@@ -718,14 +726,14 @@
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="single-work text-center mt-30">
               <div class="work-image">
-                <img src="assets/images/work/w-6.jpg" alt="work" />
+                <img src="assets/images/work/Music.png" alt="work" />
               </div>
               <div class="work-overlay">
                 <div class="work-content">
-                  <h3 class="work-title">Product Design</h3>
+                  <h3 class="work-title">Music Website Design</h3>
                   <ul>
                     <li>
-                      <a class="image-popup" href="assets/images/work/w-6.jpg"
+                      <a class="image-popup" href="assets/images/work/Music.png"
                         ><i class="lni-plus"></i
                       ></a>
                     </li>
@@ -876,7 +884,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8">
             <div class="section-title text-center pb-25">
-              <h2 class="title">From The Blog</h2>
+              <h2 class="title">From My Medium</h2>
               <p>
                 Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam
                 tempus, nunc id efficitur sagittis, urna est ultricies eros, ac
@@ -895,9 +903,7 @@
               </div>
               <div class="blog-content">
                 <h4 class="blog-title">
-                  <a href="blog-details.html"
-                    >Hired Releases 2023 Brand Health.</a
-                  >
+                  <a href="blog-details.html">The Importance of UX.</a>
                 </h4>
                 <span>July 26, 2022</span>
               </div>
@@ -911,11 +917,9 @@
               </div>
               <div class="blog-content">
                 <h4 class="blog-title">
-                  <a href="blog-details.html"
-                    >Hired Releases 2023 Brand Health.</a
-                  >
+                  <a href="blog-details.html">The Beauty of designs.</a>
                 </h4>
-                <span>July 26, 2022</span>
+                <span>March 18 2022</span>
               </div>
             </div>
             <!-- single blog -->
@@ -927,11 +931,9 @@
               </div>
               <div class="blog-content">
                 <h4 class="blog-title">
-                  <a href="blog-details.html"
-                    >Hired Releases 2023 Brand Health.</a
-                  >
+                  <a href="blog-details.html">What is UX Designer?</a>
                 </h4>
-                <span>July 26, 2022</span>
+                <span>June 16, 2020</span>
               </div>
             </div>
             <!-- single blog -->
