--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <script data-ad-client="ca-pub-4314124452179592" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!--====== Title ======-->
     <title>Syaauqi Zaidan | Developer & Designer</title>
 
